--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sit deserunt? Ratione neque, id maiores eos a dolores porro rerum repellat itaque. Illo sunt odio provident eius ab dicta delectus.
+    </p>
 </body>
 </html>
