--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sit deserunt? Ratione neque, id maiores eos a dolores porro rerum repellat itaque. Illo sunt odio provident eius ab dicta delectus.
     </p>
+    <h2>Thanks</h2>
 </body>
 </html>
