--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Thanks</h2>
     <h3>Why</h3>
     <footer>
+        <p>Magway , Myanmar</p>
         &copy; copyright
     </footer>
 </body>
